@@ -1,79 +1,81 @@
 apply plugin: 'java'
-//apply plugin: 'application'
+apply plugin: 'application'
 
-def mainClass = 'nz.dcoder.ai.astar.BoardSearch'
-def version = '0.0.1'
-sourceCompatibility = '1.7'
+ext.moduleName = 'nz.dcoder.ai'
+
+mainClassName = "$moduleName/nz.dcoder.ai.astar.BoardSearch"
+version = '0.1.0'
+sourceCompatibility = '1.9'
+
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
-// NetBeans will automatically add "run" and "debug" tasks relying on the
-// "mainClass" property. You may however define the property prior executing
-// tasks by passing a "-PmainClass=<QUALIFIED_CLASS_NAME>" argument.
-//
-// Note however, that you may define your own "run" and "debug" task if you
-// prefer. In this case NetBeans will not add these tasks but you may rely on
-// your own implementation.
-if (!hasProperty('mainClass')) {
-    ext.mainClass = mainClass
+compileJava {
+	inputs.property("moduleName", moduleName)
+	doFirst {
+		options.compilerArgs += [
+			'--module-path', classpath.asPath,
+		]
+		classpath = files()
+	}
+
+	options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "-Werror"
 }
 
-repositories {
-    mavenCentral()
-    // You may define additional repositories, or even remove "mavenCentral()".
-    // Read more about repositories here:
-    //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:repositories
-	flatDir {
-		dirs 'libs'
+compileTestJava {
+	inputs.property("moduleName", moduleName)
+	doFirst {
+		options.compilerArgs += [
+			'--module-path', classpath.asPath,
+			'--add-modules', 'junit',
+			'--add-reads', "$moduleName=junit",
+			'--path-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+		]
+	}
+
+	options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "-Werror"
+}
+
+test {
+	inputs.property("moduleName", moduleName)
+	doFirst {
+		jvmArgs += [
+			'--modulePath', classpath.asPath,
+			'--add-modules', 'ALL-MODULE-PATH',
+			'--add-reads', "$moduleName=junit",
+			'--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+		]
 	}
 }
 
-dependencies {
-    // You can read more about how to add dependency here:
-    //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:how_to_declare_your_dependencies
-    testCompile group: 'junit', name: 'junit', version: '4.10'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    //compile 'com.googlecode.aima-java:aima-core:0.11.0'
-    //compile 'java3d:vecmath:1.3.1'
+run {
+	inputs.property("moduleName", moduleName)
+	doFirst {
+		jvmArgs = [
+			'--module-path', classpath.asPath,
+			'--module', mainClassName,
+		]
+		classpath = files()
+	}
 }
 
-//applicationDefaultJvmArgs = ["-Dgreeting.language=en"]
-def mainClassName = mainClass
-//startScripts {
-//classpath  = files('lib/terrain-battle-0.0.1.jar')
-//}
-jar {
-    enabled = true
-    baseName = "dcoder-ai"
-    version = version
-    manifest {
-        def manifestCp = configurations.runtime.files.collect  {
-			File file = it
-        "${file.name}"
-		}.join(' ')
-        attributes 'Class-Path': manifestCp
-        attributes 'Main-Class': mainClass
-    }
+startScripts {
+	inputs.property("moduleName", moduleName)
+	doFirst {
+		classpath = files()
+		defaultJvmOpts = [
+			'--module-path', 'APP_HOME_LIBS',
+			'--module', mainClassName,
+		]
+	}
+
+	doLast {
+		def bashFile = new File(outputDir, applicationName)
+		String bashContent = bashFile.text
+		bashFile.text = bashContent.replaceFirst('APP_HOME_LIBS', java.util.regex.Matcher.quoteReplacement('$APP_HOME/lib'))
+
+		def batFile = new File(outputDir, applicationName + ".bat")
+		String batContent = batFile.text
+		batFile.text = batContent.replaceFirst('APP_HOME_LIBS', java.util.regex.Matcher.quoteReplacement('%APP_HOME%\\lib'))
+	}
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.1'
-}
-
-task fatJar(type: Jar) {
-	manifest {
-        attributes 'Implementation-Title': 'dcoder AI library',  
-        	'Implementation-Version': version,
-        	'Main-Class': mainClass
-    }
-    baseName = project.name + '-all'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar
-}
-/*
-distZip {
-into(project.name) {
-from '.'
-include 'assets/**', '*.dylib', '*.so'
-}
-}
- */
